# cuda-auto-installer

./: .gitignore  LICENSE  PROJECT.md  README.md  cuda_installer.py  pyproject.toml
.github/workflows/: publish.yml
ai_gpu_env/: pyvenv.cfg
ai_gpu_env/Scripts/: activate  activate.bat
