[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gpu-pkgs"
version = "0.1.0"
description = "Automatic GPU package installer for AI/ML development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pynvml>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/mrbeandev/cuda-auto-installer"
Repository = "https://github.com/mrbeandev/cuda-auto-installer"
Issues = "https://github.com/mrbeandev/cuda-auto-installer/issues"

[project.scripts]
ai-gpu-pkgs = "cuda_installer:main"